@@ -1,0 +1,9 @@
+use v6;
+
+use lib 'lib';
+use Test;
+use Test::META;
+
+meta-ok;
+
+done-testing;
